Add UI features and /me, move to E2E encryption, add Redis for rate limits and broadcast, add docker support